<resources>
    <string name="app_name">Galarte</string>
    <string name="qs_img_not_found">Question image could not be found</string>
    <string name="q0">For each question, pick your favourite option out of the 3</string>
    <string name="q1">For each question, pick your favourite option out of the 3</string>
    <string name="c1">1</string>
    <string name="c2">2</string>
    <string name="c3">3</string>
    <string name="skip">Don\'t Know</string>
    <string name="feedback_title">Your style:</string>
    <string name="fb1">Name of Style:</string>
    <string name="done">Done</string>
    <string name="next">Next</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Settings Strings -->
    <string name="back_button">Back</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="region_select">Region</string>
    <string name="pref_dark_mode_str">0</string>
    <string name="pref_default_location_title">Default Location</string>
    <string name="pref_default_location_summary">Set what location the map opens to as a default</string>
    <string name="pref_default_location_text">Bath</string>

    <string name="title_activity_maps">Map</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
